--- a/bin/AmazeUI/operation/consume.html
+++ b/bin/AmazeUI/operation/consume.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>贵阳麻将后台管理系统</title>
-    <meta name="description" content="贵阳麻将后台管理系统">
-    <meta name="keywords" content="贵阳麻将后台管理系统">
+    <title>天书后台管理系统</title>
+    <meta name="description" content="天书后台管理系统">
+    <meta name="keywords" content="天书后台管理系统">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <link rel="icon" type="image/png" href="../assets/i/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="../assets/i/app-icon72x72@2x.png">
-    <meta name="apple-mobile-web-app-title" content="贵阳麻将后台管理系统"/>
+    <meta name="apple-mobile-web-app-title" content="天书后台管理系统"/>
     <link rel="stylesheet" href="../assets/css/amazeui.min.css"/>
     <link rel="stylesheet" href="../assets/css/admin.css">
     <link rel="stylesheet" href="../assets/css/app.css">
@@ -21,7 +21,7 @@
 <body data-type="index">
 <header class="am-topbar am-topbar-inverse admin-header">
     <div class="am-topbar-brand">
-        <strong>贵州麻将</strong>
+        <strong>天书</strong>
         <small>后台管理系统</small>
     </div>
     <div class="am-icon-list tpl-header-nav-hover-ico am-fl am-margin-right"></div>
