--- a/bin/AmazeUI/operation/loginrecord.html
+++ b/bin/AmazeUI/operation/loginrecord.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>贵州麻将后台管理系统</title>
+    <title>天书后台管理系统</title>
     <meta name="description" content="这是一个 user 页面">
     <meta name="keywords" content="user">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +23,7 @@
 
 <header class="am-topbar am-topbar-inverse admin-header">
     <div class="am-topbar-brand">
-        <strong>贵州麻将</strong>
+        <strong>天书</strong>
         <small>后台管理系统</small>
     </div>
 
