select server, server notice
增加选服选项，服务器公告

--- a/bin/AmazeUI/operation/postbox.html
+++ b/bin/AmazeUI/operation/postbox.html
@@ -18,68 +18,14 @@
 </head>
 
 <body data-type="index">
-    <header class="am-topbar am-topbar-inverse admin-header">
-        <div class="am-topbar-brand">
-            <strong>天书</strong>
-            <small>后台管理系统</small>
-        </div>
-        <div class="am-icon-list tpl-header-nav-hover-ico am-fl am-margin-right"> </div>
-
-        <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only" data-am-collapse="{target: '#topbar-collapse'}"><span class="am-sr-only">导航切换</span> <span class="am-icon-bars"></span></button>
-        <!-- headbar start -->
-        <div class="am-collapse am-topbar-collapse" id="topbar-collapse">
-            <ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right admin-header-list tpl-header-list" id="admin-head-list">
-                <li v-for="item in items" class="am-dropdown" data-am-dropdown data-am-dropdown-toggle>
-                    <a class="am-dropdown-toggle tpl-header-list-link" href="javascript:;">
-                        <span :class="item.icon"></span> {{item.name}} <span class="am-icon-caret-down"></span>
-                    </a>
-                    <ul class="am-dropdown-content tpl-dropdown-content">
-                        <li v-for="i in item.items" >
-                           <a :href="i.path" type="button" :onclick="i.action"><span :class="i.icon"></span> </span> {{ i.name}}</a></li>
-
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <!-- headbar end -->
-    </header>
+    <div id = "admin-header">
+        <header-component></header-component>
+    </div>
 
     <div class="tpl-page-container tpl-page-header-fixed">
-        <!-- sidebar start -->
-       <div class="tpl-left-nav tpl-left-nav-hover">
-            <div class="tpl-left-nav-list">
-                <ul class="tpl-left-nav-menu" id="admin-sidebar-list">
-                    <li class="tpl-left-nav-item">
-                        <a href="/" class="nav-link active">
-                            <i class="am-icon-home"></i>
-                            <span>首页</span>
-                        </a>
-                    </li>
-                    <!-- table start -->
-
-                    <!-- table start -->
-
-                    <li v-for="item in items" class="tpl-left-nav-item">
-                        <a href="javascript:;" class="nav-link tpl-left-nav-link-list">
-                            <i :class="item.icon"></i>
-                            <span>{{ item.name }} </span>
-                            <i class="am-icon-angle-right tpl-left-nav-more-ico am-fr am-margin-right"></i>
-                        </a>
-                        <ul class="tpl-left-nav-sub-menu" style="display: block;">
-                            <li v-for="i in item.items">
-                                <a :href="i.path">
-                                    <i :class="i.icon"></i>
-                                    <span>{{ i.name}}</span>
-                                    <i class="am-icon-star tpl-left-nav-content-ico am-fr am-margin-right"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-
-                </ul>
-            </div>
+        <div id = "admin-sidebar">
+            <sidebar-component></sidebar-component>
         </div>
-        <!-- sidebar end -->
 
         <div class="tpl-content-wrapper">
             <ol class="am-breadcrumb">
@@ -89,9 +35,11 @@
             </ol>
             <div class="tpl-portlet-components">
                <div class="am-g tpl-amazeui-form">
-                    <div class="am-u-sm-12 am-u-md-9">
-                        <form class="am-form am-form-horizontal" id="issue_props">
+                    <div class="am-u-sm-12 am-u-md-9" id="issue_props">
 
+                        <form class="am-form am-form-horizontal">
+
+                            <server-list-component v-bind:servers="servers" v-bind:content="content"></server-list-component>
 
                             <div  class="am-form-group">
                                 <label  class="am-u-sm-3 am-form-label">邮件ID</label>
@@ -135,7 +83,7 @@
                             </div>
 
 
-                            <div  v-if="content.Kind == 3">
+                  <div  v-if="content.Kind == 3">
 
                             <div class="am-form-group">
                                 <label  class="am-u-sm-3 am-form-label">道具类型</label>
@@ -211,17 +159,22 @@
 
 <script type="text/javascript">
     new Vue({
-        el: '#admin-sidebar-list',
-        data: {items: getSideBar() }
+        el: '#admin-sidebar'
     })
     new Vue({
-        el:"#admin-head-list",
-        data:{items: getHeadBar() }
-    }) 
+        el:"#admin-header"
+    })
 
-    new Vue({
+    //server_ids%5B%5D=2&server_ids%5B%5D=1&Id=1&WidgetType=1&Count=1&Desc=&UserIds=&VIP=22&Kind=1
+    var vm = new Vue({
         el:"#issue_props",
-        data:{content:{Id:"0", WidgetType:"1",Count:1,Desc:"",UserIds:"",VIP:"22",Kind:1}},
+        data:{
+            servers:[],
+            content:{server_ids:[], Id:"0", WidgetType:"1",Count:1,Desc:"",UserIds:"",VIP:"22",Kind:1}
+        },
+        created: function() {
+            getServerList(this)
+        },
         methods:{
             onSubmit:function () {
 
@@ -245,8 +198,6 @@
                         }else{
                             $.Alert(data["msg"])
                         }
-
-
                     }
                 });
             }
